<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.presentation.screen.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginTop="@dimen/app_bar_image_margin"
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_profile"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/main_green_color"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:fontFamily="@font/officinasansextraboldscc"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/white"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/standard_start_margin"
                    android:src="@drawable/baseline_edit_24"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/standard_start_margin"
                android:text="@string/denis"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/margin_top_16_dp"
                android:text="@string/date_of_birth"
                android:textColor="#61000000"
                android:textSize="@dimen/gray_text_standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/margin_top_12dp"
                android:text="@string/field_of_activity"
                android:textColor="#61000000"
                android:textSize="@dimen/gray_text_standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSend" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:text="@string/surgery"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/margin_top_28dp"
                android:text="@string/get_push"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="184dp"
                app:layout_constraintStart_toEndOf="@+id/materialTextView5"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/material_divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/standard_start_margin"
                app:dividerColor="@color/green_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/standard_start_margin"
                android:text="@string/your_friends"
                android:textColor="#61000000"
                android:textSize="@dimen/gray_text_standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_divider1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="@dimen/edit_image_view_layout"
                android:layout_height="@dimen/edit_image_view_layout"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/margin_top_16_dp"
                android:background="@drawable/avatar_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="28dp"
                android:text="@string/dmitriy"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView1"
                android:layout_width="@dimen/edit_image_view_layout"
                android:layout_height="@dimen/edit_image_view_layout"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/margin_top_16_dp"
                android:background="@drawable/avatar_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="40dp"
                android:text="@string/evgeniy"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView1"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="@dimen/edit_image_view_layout"
                android:layout_height="@dimen/edit_image_view_layout"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="@dimen/margin_top_16_dp"
                android:background="@drawable/avatar_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_start_margin"
                android:layout_marginTop="40dp"
                android:text="@string/viktor"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView1"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView8" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/material_divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="32dp"
                app:dividerColor="@color/green_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView9" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="190dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/btn_corner_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_divider2" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>